mlm 부터 실행한 뒤 코드 실행 가능

--- a/SDC/4_Kc_Bert-MLM.ipynb
+++ b/SDC/4_Kc_Bert-MLM.ipynb
@@ -31,7 +31,10 @@
     "from transformers.optimization import get_linear_schedule_with_warmup\n",
     "\n",
     "# transformers 모델\n",
-    "from transformers import BertForSequenceClassification, BertTokenizer"
+    "from transformers import BertForSequenceClassification, BertTokenizer\n",
+    "\n",
+    "# tokenizer 로드\n",
+    "from transformers import BertTokenizer"
    ]
   },
   {
@@ -78,71 +81,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edc5389950924ad6b6e9437054a7ee43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/619 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9383a5156bab4e5b8bdf9ef590f71611",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/418M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at beomi/kcbert-base were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.bias', 'cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at beomi/kcbert-base were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.bias', 'cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at beomi/kcbert-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88f6d97cadc24921bffc3efab617a8ea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/244k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd0b95c385de47d6ac245df19203407b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/49.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -150,8 +97,9 @@
     "    LABEL_DICT, DATA_LIST, STAN_DATA = preprocessing()\n",
     "    CLASSES = len(LABEL_DICT)\n",
     "    MODEL = BertForSequenceClassification.from_pretrained(\"beomi/kcbert-base\", num_labels=len(LABEL_DICT))\n",
-    "    TOKENIZER_FIRST_TUNNING = BertTokenizer.from_pretrained(\"beomi/kcbert-base\")\n",
-    "    TOKENIZER_SECOND_TUNNING = BertTokenizer.from_pretrained(\"beomi/kcbert-base\", sp_model_kwargs={'nbest_size': -1, 'alpha': 0.6, 'enable_sampling': True})\n",
+    "    # TOKENIZER_FIRST_TUNNING = BertTokenizer.from_pretrained(\"beomi/kcbert-base\")\n",
+    "    # TOKENIZER_SECOND_TUNNING = BertTokenizer.from_pretrained(\"beomi/kcbert-base\", sp_model_kwargs={'nbest_size': -1, 'alpha': 0.6, 'enable_sampling': True})\n",
+    "    TOKENIZER = BertTokenizer('./test-mlm/vocab.txt', do_lower_case=False)\n",
     "    SEED = 3413\n",
     "    BATCH_SIZE = 16\n",
     "    EPOHCS = 100\n",
@@ -178,7 +126,7 @@
     "    def __init__(self, fold, tokenizer, batch_size, data):\n",
     "        super().__init__()\n",
     "        self.fold = fold\n",
-    "        self.tokenizer = CONFIG.TOKENIZER_SECOND_TUNNING\n",
+    "        self.tokenizer = CONFIG.TOKENIZER\n",
     "        self.batch_size = CONFIG.BATCH_SIZE\n",
     "        self.data_list = data\n",
     "        self.max_length = CONFIG.MAX_LENGTH\n",
@@ -334,12 +282,208 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb43a6d3ed3c429993fe9dd8e8ba4686",
+       "model_id": "6c1b0294077f465c975b27d13bfbfeb2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -802,54 +946,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8737c99085ec4497942fbf8b1ea041cb",
+       "model_id": "28d052697f6e4d01a5083304dd04b270",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validating: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validating: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validating: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1130,7 +1232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f10537ec0fa4d379c4b306bd2a41451",
+       "model_id": "0da85e783bda4d39b2d029c24e412459",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1366,12 +1468,68 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "623a733dd8cd45a3b6c8e503fbeb71aa",
+       "model_id": "d7dfeea830a0465dbbdce20fc05b92aa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1574,7 +1732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "910f7af4f4af411d8214a2a2873d0226",
+       "model_id": "1c84a6ba8147479fa9f993f8d82aafab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1785,7 +1943,7 @@
    "source": [
     "# first fine-tunning\n",
     "for fold in range(CONFIG.FOLD):\n",
-    "    first_data = LightningData(fold=fold, tokenizer=CONFIG.TOKENIZER_FIRST_TUNNING, batch_size=CONFIG.BATCH_SIZE, data=CONFIG.STAN_DATA)\n",
+    "    first_data = LightningData(fold=fold, tokenizer=CONFIG.TOKENIZER, batch_size=CONFIG.BATCH_SIZE, data=CONFIG.STAN_DATA)\n",
     "    chk_callback = ModelCheckpoint(monitor='val_accuracy',\n",
     "                                  filename='model_best',\n",
     "                                  save_top_k=1,\n",
@@ -1808,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9940c015-2237-4935-824e-fb51ed5ccad9",
    "metadata": {
     "tags": []
@@ -1851,7 +2009,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e97822bdc69041efaed1f4d5e6c2cf37",
+       "model_id": "960e21b63f0b4122b36a5bf65f08f3ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1977,21 +2135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validating: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "e2989791506d4c68bb5709ce2e35fdc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2006,7 +2150,7 @@
    "source": [
     "# second fine-tunning\n",
     "for fold in range(1):\n",
-    "    dm = LightningData(fold = fold, tokenizer=CONFIG.TOKENIZER_SECOND_TUNNING, batch_size=CONFIG.BATCH_SIZE, data=CONFIG.DATA_LIST)\n",
+    "    dm = LightningData(fold = fold, tokenizer=CONFIG.TOKENIZER, batch_size=CONFIG.BATCH_SIZE, data=CONFIG.DATA_LIST)\n",
     "    chk_callback = ModelCheckpoint(monitor='val_accuracy',\n",
     "                                  filename='model_best',\n",
     "                                  save_top_k=1,\n",
@@ -2029,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fba19583-367b-48d1-9e14-69a05605fb54",
    "metadata": {},
    "outputs": [],
@@ -2044,12 +2188,12 @@
     "     \n",
     "    texts = df['text'].values\n",
     "\n",
-    "    indices = CONFIG.TOKENIZER_SECOND_TUNNING.batch_encode_plus(texts,\n",
-    "                                                                max_length=CONFIG.MAX_LENGTH,\n",
-    "                                                                add_special_tokens=True,\n",
-    "                                                                return_attention_mask=True,\n",
-    "                                                                padding='longest',\n",
-    "                                                                truncation=True)\n",
+    "    indices = CONFIG.TOKENIZER.batch_encode_plus(texts,\n",
+    "                                                max_length=CONFIG.MAX_LENGTH,\n",
+    "                                                add_special_tokens=True,\n",
+    "                                                return_attention_mask=True,\n",
+    "                                                padding='longest',\n",
+    "                                                truncation=True)\n",
     "    \n",
     "    input_ids = indices[\"input_ids\"]\n",
     "    attention_masks = indices[\"attention_mask\"]\n",
@@ -2101,32 +2245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5560cdbc-7dfa-43be-ba19-d231027f350b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicting labels\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cec8ee5fa712432caa2fc0955cb7f7d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6250 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict = sdc_predict(model, CONFIG.DEVICE, batch_size=CONFIG.BATCH_SIZE)\n",
     "predict = predict.iloc[:, :-2]"
@@ -2134,18 +2256,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "33fe78a3-5e99-4d6f-aa66-b42e75fb911c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict.to_csv(f'submission_kcbert.csv', index=False) "
+    "predict.to_csv(f'submission_kcbert2.csv', index=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2b8e7944-1462-4926-a5f4-9434f606815d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b8e7944-1462-4926-a5f4-9434f606815d",
+   "id": "a006d026-409d-440e-8f55-a8642e54b557",
    "metadata": {},
    "outputs": [],
    "source": []
